--- a/Pages/reservas.html
+++ b/Pages/reservas.html
@@ -12,18 +12,38 @@
     <title>Document</title>
 </head>
 <body class="backreservas">
-    <header class="header">
-        <div class="logo">
-            <img src="assets/pngwing.com.png" alt="">
-        </div>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="fotos.html">VINOS</a></li>
-                <li><a href="historia.html">HISTORIA</a></li>
-                <li><a href="reservas.html">RESERVAS</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+    <header>
+        
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark header">
+            <div class="logo">
+                <img src="../assets/pngwing.com.png" alt="">
+            </div>
+            <!-- Brand -->
+            <a class="navbar-brand" href="#"></a>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="fotos.html">VINOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="historia.html">HISTORIA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="reservas.html">RESERVAS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">CONTACTO</a>
+                </li>
             </ul>
+            </div>
         </nav>
     </header>
     <h1 class="titulosforms titulos2">Reservas</h1>
