--- a/Pages/fotos.html
+++ b/Pages/fotos.html
@@ -12,60 +12,80 @@
     <title>Document</title>
 </head>
 <body>
-  <header class="header">
+  <header>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark header">
     <div class="logo">
-        <img src="../assets/pngwing.com.png" alt="">
-    </div>
-    <nav>
-        <ul class="nav__links">
-            <li><a href="../index.html">INICIO</a></li>
-            <li><a href="fotos.html">VINOS</a></li>
-            <li><a href="historia.html">HISTORIA</a></li>
-            <li><a href="reservas.html">RESERVAS</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
-        </ul>
+      <img src="../assets/pngwing.com.png" alt="">
+  </div>
+      <!-- Brand -->
+      <a class="navbar-brand" href="#"></a>
+      <!-- Toggler/collapsibe Button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Navbar links -->
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="../Pages/fotos.html">VINOS</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="../Pages/historia.html">HISTORIA</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="../Pages/reservas.html">RESERVAS</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="../Pages/contacto.html">CONTACTO</a>
+          </li>
+      </ul>
+      </div>
     </nav>
 </header>
 <h1 class="titulos2 titulovino">Vinoteca</h1>
     <section class="galeria">
-          <div class="gallery">
-            <a target="_blank" href="../assets/tardia.jpeg">
-              <img src="../assets/tardia.jpeg" alt="Tardia" width="600" height="400">
-            </a>
-            <div class="desc">Cosecha Tardia</div>
-          </div>
-          <div class="gallery">
-            <a target="_blank" href="../assets/lotenegro.jpeg">
-              <img src="../assets/lotenegro.jpeg" alt="lotenegro" width="600" height="400">
-            </a>
-            <div class="desc">Lote Negro</div>
-          </div>
-          <div class="gallery">
-            <a target="_blank" href="../assets/reserva.jpeg">
-              <img src="../assets/reserva.jpeg" alt="Reserva" width="600" height="400">
-            </a>
-            <div class="desc">Reserva</div>
-          </div>
-          <div class="gallery">
-            <a target="_blank" href="../assets/nortonclasico.jpeg">
-              <img src="../assets/nortonclasico.jpeg" alt="NortonClasico" width="600" height="400">
-            </a>
-            <div class="desc">Clasico</div>
-          </div>
-          <div class="card" style="width:400px">
+          <div class="card borde" style="width:200px">
             <img class="card-img-top" src="../assets/tardia.jpeg" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">John Doe</h4>
+              <h4 class="card-title">Cosecha Tardia</h4>
               <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+              <a href="#" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+          <div class="card borde" style="width:200px">
+            <img class="card-img-top" src="../assets/lotenegro.jpeg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Lote Negro</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+          <div class="card borde" style="width:200px">
+            <img class="card-img-top" src="../assets/reserva.jpeg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Norton Reserva</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+          <div class="card borde" style="width:200px">
+            <img class="card-img-top" src="../assets/nortonclasico.jpeg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Norton Clásico</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">More Info</a>
             </div>
           </div>
     </section>
-        <div class="footer">
+    </section>
+        <footer class="footer">
           Nuestras Redes
               <img src="../assets/pngwing.com (3).png" alt="">
               <img src="../assets/pngwing.com (5).png" alt="">
-        </div>
+        </footer>
     
 </body> 
 </html>
