--- a/Pages/reservas.html
+++ b/Pages/reservas.html
@@ -46,36 +46,33 @@
             </div>
         </nav>
     </header>
-    <h1 class="titulosforms titulos2">Reservas</h1>
+    <h1 class="titulovino titulos2">Reservas</h1>
         <section class="forms">
             <div class="contact__fieldset--reservas">
                 <div>Nombre y Apellido:</div>
-                <input type="text" name="" id="">
+                <input class="campo" type="text" name="" id="">
                 <div>Mail:</div>
-                <input type="email" name="" id="">
-                <div class="dropdown">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        Elige una opción:
-                        </button>
-                        <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">1</a>
-                        <a class="dropdown-item" href="#">2</a>
-                        <a class="dropdown-item" href="#">3</a>
-                        <a class="dropdown-item" href="#">4</a>
-                        <a class="dropdown-item" href="#">5</a>
-                        </div>
-                    </div>
+                <input class="campo" type="email" name="" id="">
+                <div>Cantidad de Personas</div>
+                <form>
+                    <select class="campo" id="Personas" name="Personas">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </form>
                 <div>Fecha y Horario:</div>
-                <input type="datetime-local" name="" id="">
-                <br>
-                <input type="submit" value="Enviar">
+                <input class="campo" type="datetime-local" name="" id="">
+                <button type="button" class="boton">Enviar</button>
             </div>
         </section>
-    <div class="footer">
+    <footer>
         Nuestras Redes
-            <img src="assets/pngwing.com (3).png" alt="">
-            <img src="assets/pngwing.com (5).png" alt="">
-    </div>
+            <img src="../assets/pngwing.com (3).png" alt="">
+            <img src="../assets/pngwing.com (5).png" alt="">
+    </footer>
     
 </body>
 </html>
