--- a/Pages/fotos.html
+++ b/Pages/fotos.html
@@ -47,45 +47,106 @@
 </header>
 <h1 class="titulos2 titulovino">Vinoteca</h1>
     <section class="galeria">
-          <div class="card borde" style="width:200px">
-            <img class="card-img-top" src="../assets/tardia.jpeg" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">Cosecha Tardia</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">More Info</a>
+      <div class=>
+        <div class="row">
+          <div class="">
+            <div class="card borde card-flip h-60" style="width:200px">
+              <div class="card-front text-white bg-dark">
+                <img class="card-img-top" src="../assets/tardia.jpeg" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Cosecha Tardia</h4>
+                  <p class="card-text">Some example text.</p>
+                </div>
+              </div>
+                <div class="card-back bg-white">
+                  <div class="card-body">
+                      <h3 class="card-title">Cosecha Tardia</h3>
+                      <p class="card-text"></p>
+                      <a href="#" class="btn btn-outline-secondary">More Info</a>
+                  </div>
+                </div>
             </div>
           </div>
-          <div class="card borde" style="width:200px">
-            <img class="card-img-top" src="../assets/lotenegro.jpeg" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">Lote Negro</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">More Info</a>
-            </div>
-          </div>
-          <div class="card borde" style="width:200px">
-            <img class="card-img-top" src="../assets/reserva.jpeg" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">Norton Reserva</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">More Info</a>
-            </div>
-          </div>
-          <div class="card borde" style="width:200px">
-            <img class="card-img-top" src="../assets/nortonclasico.jpeg" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">Norton Clásico</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">More Info</a>
-            </div>
-          </div>
+              <div class="">
+                <div class="card borde card-flip h-60" style="width:200px">
+                  <div class="card-front text-white bg-dark">
+                    <img class="card-img-top" src="../assets/lotenegro.jpeg" alt="Card image">
+                      <div class="card-body">
+                        <h4 class="card-title">Lote Negro</h4>
+                        <p class="card-text">Some example text.</p>
+                      </div>
+                    </div>
+                  <div class="card-back bg-white">
+                    <div class="card-body">
+                        <h3 class="card-title">Lote Negro</h3>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">More Info</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class=>
+                <div class="card borde card-flip h-60" style="width:200px">
+                  <div class="card-front text-white bg-dark">
+                    <img class="card-img-top" src="../assets/reserva.jpeg" alt="Card image">
+                      <div class="card-body">
+                        <h4 class="card-title">Norton Reserva</h4>
+                        <p class="card-text">Some example text.</p>
+                      </div>
+                    </div>
+                  <div class="card-back bg-white">
+                    <div class="card-body">
+                        <h3 class="card-title">Norton Reserva</h3>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">More Info</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class=>
+                <div class="card borde card-flip h-60" style="width:200px">
+                  <div class="card-front text-white bg-dark">
+                    <img class="card-img-top" src="../assets/nortonclasico.jpeg" alt="Card image">
+                      <div class="card-body">
+                        <h4 class="card-title">Norton Clásico</h4>
+                        <p class="card-text">Some example text.</p>
+                      </div>
+                    </div>
+                  <div class="card-back bg-white">
+                    <div class="card-body">
+                        <h3 class="card-title">Norton Clásico</h3>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">More Info</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class=>
+                <div class="card borde card-flip h-60" style="width:200px">
+                  <div class="card-front text-white bg-dark">
+                    <img class="card-img-top" src="../assets/privada.jpeg" alt="Card image">
+                      <div class="card-body">
+                        <h4 class="card-title">Cosecha Privada</h4>
+                        <p class="card-text">Some example text.</p>
+                      </div>
+                    </div>
+                  <div class="card-back bg-white">
+                    <div class="card-body">
+                        <h3 class="card-title">Cosecha Privada</h3>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">More Info</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+      
     </section>
-    </section>
-        <footer class="footer">
-          Nuestras Redes
-              <img src="../assets/pngwing.com (3).png" alt="">
-              <img src="../assets/pngwing.com (5).png" alt="">
-        </footer>
+    <footer>
+      Nuestras Redes
+        <img src="../assets/pngwing.com (3).png" alt="">
+        <img src="../assets/pngwing.com (5).png" alt="">
+    </footer>
     
 </body> 
 </html>
