--- a/Pages/reservas.html
+++ b/Pages/reservas.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
     <title>Document</title>
 </head>
@@ -48,7 +48,7 @@
     </header>
     <h1 class="titulovino titulos2">Reservas</h1>
         <section class="forms">
-            <div class="contact__fieldset--reservas">
+            <div class="contact__fieldset">
                 <div>Nombre y Apellido:</div>
                 <input class="campo" type="text" name="" id="">
                 <div>Mail:</div>
@@ -65,7 +65,9 @@
                 </form>
                 <div>Fecha y Horario:</div>
                 <input class="campo" type="datetime-local" name="" id="">
-                <button type="button" class="boton">Enviar</button>
+                <div>
+                    <button type="button" class="boton">Enviar</button>
+                </div>
             </div>
         </section>
     <footer>
