--- a/Pages/fotos.html
+++ b/Pages/fotos.html
@@ -51,88 +51,88 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/norton-blanco.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/norton-blanco.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Clasico</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Clasico</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortoncoleccion.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortoncoleccion.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Colección</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Colección</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortonrosado.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonrosado.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Malbec Rosado</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Malbec Rosado</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortonmalbec.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonmalbec.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Malbec Colección</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Malbec Colección</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortonmerlot.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonmerlot.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Merlot Colección</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Merlot Colección</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortonblanc.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonblanc.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Suavignon Blanc</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Suavignon Blanc</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/nortongernot.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortongernot.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Gernot Langes</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Gernot Langes</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip_card-img" src="../assets/cosecha-tardia-rose.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/cosecha-tardia-rose.png" alt="Avatar">
                   </div>
                   <div class="flip-card-back">
-                    <p class="flip_card-text">Norton Cosecha Tardia Rose</p>
-                    <input class="flip_card-boton" type="button" value="More Info">
+                    <p class="flip-card-text">Norton Cosecha Tardia Rose</p>
+                    <input class="flip-card-boton" type="button" value="More Info">
                   </div>
                 </div>
               </div>
