--- a/Pages/historia.html
+++ b/Pages/historia.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
     <title>HISTORIA</title>
 </head>
-<body>
+<body class="backhistoria">
     <header>
             
         <nav class="navbar navbar-expand-md bg-dark navbar-dark header">
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <section>
-        <h1 class="titulos2">Historia</h1>
+        <h1 class="titulos2 titulosforms">Historia</h1>
             <img class="imghistoria" src="../assets/viejo.jpeg" alt="">
             <P class="textohistoria">          
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, veniam rem quia temporibus molestiae harum! Porro ducimus quam illo, sunt earum assumenda exercitationem minima omnis delectus rem veritatis magni saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui voluptas ipsa et consectetur placeat repellat omnis tenetur, sit blanditiis, nemo cumque voluptate natus voluptatem? Pariatur iste perferendis natus unde commodi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta reprehenderit, cum dolorum vitae molestiae, aliquam, ratione repellendus adipisci quibusdam ipsum molestias quam cupiditate? Quaerat accusantium ipsam ipsa odio sint aspernatur.
