--- a/index.html
+++ b/index.html
@@ -76,14 +76,11 @@
                     <span class="carousel-control-next-icon"></span>
                 </a>
                 </div>
-            <h2 class="title">Titulo1</h2>
-            <p class="textohome">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque totam mollitia maiores magnam exercitationem, adipisci, molestiae rem vel laborum, repudiandae blanditiis tempora quam in repellendus corrupti molestias officiis obcaecati consequatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ut. Quia aut incidunt debitis dolorum. Nesciunt harum reprehenderit quas, laborum quia, nobis esse quidem consequatur possimus vel error necessitatibus repellendus!
-            </p>
+            <h2 class="title">Nuestros Viñedos</h2>
+            <p class="textohome">Bodega Mendoza cuenta con cinco viñedos repartidos por los principales terroirs de la provincia de Mendoza, a los pies de la cordillera de los Andes, y todos ellos dentro de una zona privilegiada conocida como la Primera Zona, por la calidad de sus uvas. No es solo la ubicación geográfica lo que influencia la calidad de nuestros vinos, sino la edad de nuestras vides. Su edad promedio es de aproximadamente 30 años, y también contamos con un gran número de hectáreas cultivadas con vides de 80 años de edad.
             <img class="img img-fluid" src="assets/masviñedos.jpeg" alt="">
-            <h2 class="title">Titulo2</h2>
-            <p class="textohome">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore ut illo voluptatibus blanditiis ipsa vel omnis explicabo expedita ipsum deleniti asperiores non, harum molestias. Ea nam fuga odio obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque molestiae recusandae odit ipsum rerum deleniti reiciendis asperiores labore obcaecati quibusdam nobis dolorem quod neque, iure provident omnis facere consequatur?</p>
-        
+            <h2 class="title">Conócenos</h2>
+            <p class="textohome">Los vinos saben mejor cuando se los disfruta en un lugar espectacular. Vení y visitanos para vivir la experiencia de más de 125 años de herencia de producción de vinos en nuestra hermosa locación a los pies de Los Andes. Descubrí qué hace a la creación de tu vendimia favorita, disfrutá de un maravilloso almuerzo en nuestro restaurante La Vid, tomá una clase de cocina, pedaleá entre las vides en un safari fotográfico, o acomodate en un picnic gourmet especial con vista a los viñedos y los andes nevados. Incluso podés optar por una cata exclusiva de los vinos más icónicos del viñedo en la Cava Selecta, o convertite en enólogo por el día y crea tu propio blend.
     </section>
     <footer>
         Nuestras Redes
