--- a/Pages/fotos.html
+++ b/Pages/fotos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conocé nuestros vinos">
+    <meta name="keywords"  content="VINO, BODEGA, UVAS, BOTELLAS">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
-    <title>Fotos</title>
+    <title>FOTOS</title>
 </head>
 <body class="estanteria backfotos">
   <header>
@@ -51,7 +53,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/norton-blanco.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/norton-blanco.png" alt="Norton Clasico">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Clasico</p>
@@ -62,7 +64,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortoncoleccion.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortoncoleccion.png" alt="Norton Colección">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Colección</p>
@@ -73,7 +75,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortonrosado.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonrosado.png" alt="Norton Rosado">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Malbec Rosado</p>
@@ -84,7 +86,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortonmalbec.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonmalbec.png" alt="Norton Malbec">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Malbec Colección</p>
@@ -95,7 +97,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortonmerlot.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonmerlot.png" alt="Norton Merlot">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Merlot Colección</p>
@@ -106,7 +108,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortonblanc.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortonblanc.png" alt="Norton Blanc">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Suavignon Blanc</p>
@@ -117,7 +119,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/nortongernot.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/nortongernot.png" alt="Norton Gernot">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Gernot Langes</p>
@@ -128,7 +130,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img class="flip-card-img" src="../assets/cosecha-tardia-rose.png" alt="Avatar">
+                    <img class="flip-card-img" src="../assets/cosecha-tardia-rose.png" alt="Norton Tardia">
                   </div>
                   <div class="flip-card-back">
                     <p class="flip-card-text">Norton Cosecha Tardia Rose</p>
