--- a/Pages/historia.html
+++ b/Pages/historia.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nuestra historia">
+    <meta name="keywords"  content="HISTORIA, FUNDADOR, BODEGA, VIÑEDOS">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -48,7 +50,7 @@
     </header>
     <section>
         <h1 class="titulos2 titulosforms">Historia</h1>
-            <img class="imghistoria" src="../assets/viejo.jpeg" alt="">
+            <img class="imghistoria" src="../assets/viejo.jpeg" alt="fundador">
             <P class="textohistoria">          
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, veniam rem quia temporibus molestiae harum! Porro ducimus quam illo, sunt earum assumenda exercitationem minima omnis delectus rem veritatis magni saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui voluptas ipsa et consectetur placeat repellat omnis tenetur, sit blanditiis, nemo cumque voluptate natus voluptatem? Pariatur iste perferendis natus unde commodi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta reprehenderit, cum dolorum vitae molestiae, aliquam, ratione repellendus adipisci quibusdam ipsum molestias quam cupiditate? Quaerat accusantium ipsam ipsa odio sint aspernatur.
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae nesciunt labore quasi provident assumenda ipsa, iusto placeat consectetur id itaque dolor error non laudantium corporis aliquid quam saepe exercitationem impedit.
@@ -56,7 +58,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est animi eaque ipsam fuga nam debitis soluta error, in eveniet quaerat necessitatibus obcaecati voluptatum molestiae harum, vero voluptatibus molestias quidem nesciunt?
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam perspiciatis eligendi, nobis perferendis fuga odit, fugit minima ullam voluptates aliquid dolor ab omnis consequatur iure. Harum vitae modi non? Reprehenderit.
             </P>
-            <img class="imghistoria2" src="../assets/bodegavieja.jpeg" alt="">
+            <img class="imghistoria2" src="../assets/bodegavieja.jpeg" alt="bodegavieja">
             <p class="textohistoria2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod corporis repellendus, iure nisi impedit sit eaque quae, labore dolorem quidem voluptatum mollitia laboriosam sunt pariatur, eligendi fugiat aperiam deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eos, id iure nobis suscipit non, eaque minima obcaecati sapiente maxime laudantium possimus sint, adipisci inventore. Fugit at accusamus voluptatibus eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, voluptas provident asperiores fugiat a quibusdam vitae numquam, autem odio quas sit! Recusandae necessitatibus eius temporibus consequuntur numquam omnis consectetur minima! 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatem voluptatum voluptas iste modi quisquam beatae commodi, odio inventore sapiente molestiae debitis cum nihil alias rerum aspernatur! Tenetur, fugit dolorum?
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus et eius, ea vitae labore ducimus iusto saepe quasi at ipsam. Culpa necessitatibus tempora obcaecati impedit, voluptates ipsa autem dolorem molestiae.
