--- a/Pages/reservas.html
+++ b/Pages/reservas.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hacé tu reserva">
+    <meta name="keywords"  content="COMIDA, RESTAURANTE, COMER, VINO, PLACER">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
-    <title>Document</title>
+    <title>RESERVAS</title>
 </head>
 <body class="backreservas">
     <header>
         
         <nav class="navbar navbar-expand-md bg-dark navbar-dark header">
             <div class="logo">
-                <img src="../assets/pngwing.com.png" alt="">
+                <img src="../assets/pngwing.com.png" alt="logo">
             </div>
             <!-- Brand -->
             <a class="navbar-brand" href="#"></a>
