--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bienvenido a Bodega Mendoza">
+    <meta name="keywords"  content="BODEGA, VINO, VIÑEDO, COMIDA, PLACER, MENDOZA">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -18,7 +20,7 @@
             
             <nav class="navbar navbar-expand-md bg-dark navbar-dark header">
                 <div class="logo">
-                    <img src="assets/pngwing.com.png" alt="">
+                    <img src="assets/pngwing.com.png" alt="logo">
                 </div>
                 <!-- Brand -->
                 <a class="navbar-brand" href="#"></a>
@@ -65,7 +67,7 @@
                     <img class="img img-fluid" src="assets/viñedos.jpeg" alt="viñedos">
                     </div>
                     <div class="carousel-item">
-                    <img class="img img-fluid" src="assets/viñedos2.jpeg" alt="uvas">
+                    <img class="img img-fluid" src="assets/viñedos2.jpeg" alt="masviñedos">
                     </div>
                 </div>
                 
@@ -78,7 +80,7 @@
                 </div>
             <h2 class="title">Nuestros Viñedos</h2>
             <p class="textohome">Bodega Mendoza cuenta con cinco viñedos repartidos por los principales terroirs de la provincia de Mendoza, a los pies de la cordillera de los Andes, y todos ellos dentro de una zona privilegiada conocida como la Primera Zona, por la calidad de sus uvas. No es solo la ubicación geográfica lo que influencia la calidad de nuestros vinos, sino la edad de nuestras vides. Su edad promedio es de aproximadamente 30 años, y también contamos con un gran número de hectáreas cultivadas con vides de 80 años de edad.
-            <img class="img img-fluid" src="assets/masviñedos.jpeg" alt="">
+            <img class="img img-fluid" src="assets/masviñedos.jpeg" alt="todaviamasviñedos">
             <h2 class="title">Conócenos</h2>
             <p class="textohome">Los vinos saben mejor cuando se los disfruta en un lugar espectacular. Vení y visitanos para vivir la experiencia de más de 125 años de herencia de producción de vinos en nuestra hermosa locación a los pies de Los Andes. Descubrí qué hace a la creación de tu vendimia favorita, disfrutá de un maravilloso almuerzo en nuestro restaurante La Vid, tomá una clase de cocina, pedaleá entre las vides en un safari fotográfico, o acomodate en un picnic gourmet especial con vista a los viñedos y los andes nevados. Incluso podés optar por una cata exclusiva de los vinos más icónicos del viñedo en la Cava Selecta, o convertite en enólogo por el día y crea tu propio blend.
     </section>
